bindings/python/llvm/values.py


    library.LLVMIsGlobalConstant.argtypes = [GlobalValue]
    library.LLVMIsGlobalConstant.restype = c_bool

    library.LLVMIsThreadLocal.argtypes = [GlobalValue]
    library.LLVMIsThreadLocal.restype = c_bool

    library.LLVMRemoveAttribute.argtypes = [ArgumentValue, Attribute]

    library.LLVMRemoveFunctionAttr.argtypes = [FunctionValue, Attribute]

    library.LLVMSetAlignment.argtypes = [GlobalValue, c_uint]

    library.LLVMSetFunctionCallConv.argtypes = [FunctionValue, c_uint]

    library.LLVMSetGC.argtypes = [FunctionValue, c_char_p]

    library.LLVMSetGlobalConstant.argtypes = [GlobalValue]

    library.LLVMSetInitializer.argtypes = [GlobalValue, ConstantValue]

    library.LLVMSetLinkage.argtypes = [GlobalValue, c_int]

    library.LLVMSetMetadata.argtypes = [Instruction, c_uint, MDNode]

    library.LLVMSetOperand.argtypes = [User, c_uint, Value]

    library.LLVMSetSection.argtypes = [GlobalValue, c_char_p]

    library.LLVMSetThreadLocal.argtypes = [GlobalValue]

    library.LLVMSetValueName.argtypes = [Value, c_char_p]

    library.LLVMSetVisibility.argtypes = [GlobalValue, c_int]

    library.LLVMTypeOf.argtypes = [Value]
    library.LLVMTypeOf.restype = c_object_p

    def handle_entry(k, v):
        if k == '_default':
            return

        func = 'LLVMIsA%s' % k

        library[func].argtypes = [c_object_p]
        library[func].restype = c_object_p

        if isinstance(v, dict):
            for k2, v2 in v.iteritems():
                handle_entry(k2, v2)

    for k, v in Value.type_tree.iteritems():
        handle_entry(k, v)

def register_enumerations():
    for name, value in enumerations.OpCodes:
        OpCode.register(name, value)

register_library(lib)
register_enumerations()

